# boat-cli

./: CHANGELOG.md  Cargo.toml  README.md
docs/: demo.tape
src/: cli.rs  config.rs  main.rs  models.rs  utils.rs
src/cli/: args.rs  mod.rs  period.rs
src/commands/: activity.rs  cancel.rs  create.rs  delete.rs  edit.rs  get.rs  init.rs  list.rs  mod.rs  modify.rs  pause.rs  query.rs  report.rs  start.rs
src/models/: activity.rs  activity_log.rs  activity_with_log.rs  boat_data.rs  log.rs  mod.rs  tag.rs
src/utils/: common.rs  date.rs  display.rs  mod.rs
tests/: cli_activity_flow.rs  cli_cancel.rs  cli_delete.rs  cli_errors.rs  cli_get.rs  cli_init.rs  cli_list.rs  cli_modify.rs  cli_new.rs  cli_pause.rs  cli_report.rs  cli_smoke.rs  cli_start.rs  utils.rs
